[package]
authors = ["Martin Rückl <enigma@nbubu.de>"]
description = "Implementation of NeuroEvolution of Augmenting Topologies (NEAT)"
keywords = ["neuroevolution", "neat", "aumenting-topologies", "genetic", "algorithm"]
license = "MIT"
name = "neat-rs"
version = "0.0.1"

[dependencies]
lazycell = "1.3.0"
rand = "0.8.5"
approx = "0.5.1"
ndarray = { vesion = "0.15.0", features = ["approx-0_5"] }
petgraph = "0.6.0"
clippy = { version = "0.0.103", optional = true }
generator = "0.7.0"